--- a/project-tracking-intro-component/style.css
+++ b/project-tracking-intro-component/style.css
@@ -177,11 +177,206 @@ footer a {
   color:  hsl(230, 11%, 40%);
 }
 
+}
 
+@media (min-width: 551px) {
 
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Barlow', sans-serif;
+    font-weight: 400;
+  }
 
+  /* font-family: 'Barlow Condensed', sans-serif;   400 700 */
 
+ body::after {
+   content: '';
+   width:53vw;
+   height: 60vh;
+   background-color:  hsl(207, 33%, 95%);
+   position:absolute;
+   z-index: -1;
+    right: 0;
+    top: 0;
+    border-radius: 0 0 0 50px;
+ }
 
+ .navbar-brand {
+   width: 20%;
+   margin-top: 3%;
+   margin-left: 8%;
+ }
+
+ .navbar-brand img {
+   margin-top: 0;
+   width: 30%;
+ }
+
+.navbar-expand-lg .navbar-collapse {
+  margin-top: 3%;
+  margin-left: 35%;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 2.5rem;
+    padding-left: .5rem;
+}
+
+.navbar a {
+  text-transform: uppercase;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-weight: 700;
+  padding-right: 12%;
+}
+
+.navbar a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.login {
+  width: 2px;
+  height: 5px;
+  border-left: 5px dotted hsl(231, 7%, 65%);
+  padding-left: 5%;
+  padding-right: 10%;
+  margin-top: 5%
+}
+
+.login a {
+  padding-left: 10%;
+  color: rgba(0,0,0,.5);
+  margin-top: -22%;
+  margin-left: 30%;
+}
+
+.login a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  margin-top: 5%;
+}
+
+.text-wrapper {
+  order: 1;
+  margin-left: 6%;
+  margin-top: 5%;
+}
+
+.top-img {
+  order: 2;
+  overflow: hidden;
+}
+
+.top-img img {
+  width: 120%;
+  margin-bottom: 10%;
+  margin-left: 10%;
+}
+
+.box-1, .box-2 {
+  width: 100%;
+}
+
+.box-1 h1 {
+  margin-left: 30px;
+  width: 80%;
+  font-size: 1.3rem;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: rgba(0,0,0,.5);
+  letter-spacing: 2px;
+}
+
+.box-1 span {
+  color: white;
+  background-color: hsl(230, 29%, 20%);
+  padding: 1% 3%;;
+  border-radius: 20px;
+  margin-right: 3%;
+}
+
+.box-2 h1 {
+  width: 70%;
+   color: hsl(230, 29%, 20%);
+   margin-left: 30px;
+   font-family: 'Barlow Condensed', sans-serif;
+   font-weight: 700;
+   text-transform: uppercase;
+   padding-top: 2%;
+   font-size: 3rem;
+   letter-spacing: 3px;
+}
+
+.box-2 h2 {
+  width: 50%;
+  color: rgba(0,0,0,.5);
+  margin-left: 30px;
+  font-size: 1rem;
+  padding-top: 2%;
+  letter-spacing: 1px;
+}
+
+.box-3 {
+  width: 100%;
+  display: flex;
+  margin-top: 10%;
+}
+
+.box-3 button {
+  width: 30%;
+  margin-left: 30px;
+  padding: 0 3%;
+  outline: none;
+  color: white;
+  background-color: hsl(0, 100%, 68%);
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  border: none;
+  font-weight: 700;
+}
+
+.box-3 button:hover {
+  cursor: pointer;
+  background-color: hsl(0, 100%, 78%);
+}
+
+.box-3 p {
+  margin-left: 3%;
+  color: rgba(0,0,0,.5);
+  text-transform: uppercase;
+  padding-top: 3%;
+  word-spacing: 3px;
+}
+
+footer {
+  width: 100%;
+  color:  hsl(230, 11%, 40%);
+  text-align: center;
+  margin-top: 3%;
+}
+
+footer p {
+  width: 70%;
+  margin-left: 15%;
+}
+
+footer a {
+  text-decoration: none;
+  color:  hsl(230, 11%, 40%);
+}
+
+footer a:hover {
+  text-decoration: underline;
+  color:  hsl(230, 11%, 30%);
+}
 
 
 }
